Adds Link field to Events Block

--- a/templates/block/block--events-calendar.html.twig
+++ b/templates/block/block--events-calendar.html.twig
@@ -27,6 +27,12 @@
 			<h2{{title_attributes}}>{{ label }}</h2>
 		{% endif %}
 		{{ title_suffix }}
-		{{ content }}
+		{{ content|without('field_additional_events_link') }}
+		{# Events Link #}
+		<div class="ucb-calendar-block-link-container">
+		{% for item in content['#block_content'].field_additional_events_link.value %}
+			{{ link(item.title, item.uri, {'class': ['ucb-calendar-button']} ) }}
+		{% endfor %}
+		</div>
 	</div>
 {% endblock %}
