--- a/css/block/events-calendar.css
+++ b/css/block/events-calendar.css
@@ -277,6 +277,29 @@ table.localist_minicalendar_minicalendar caption {
   line-height: 1;
 }
 
+.ucb-calendar-block-link-container{
+  text-align: center;
+}
+
+.ucb-calendar-button{
+  display: inline-block;
+  padding: 5px 10px;
+  font-weight: bold;
+  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin-bottom: 5px;
+  background-clip: padding-box;
+  color: #0277BD !important;
+  border: 1px solid #0277BD;
+  border-radius: 0px;
+  background-color: transparent;
+}
+
+.ucb-calendar-button:hover{
+  transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
+  background-color: #0277BD;
+  color: white !important;
+}
+
 @media screen and (min-width: 600px) {
   .template-5 .le-date-wrapper .le-date-month {
     font-size: 250%;
