--- a/css/menu-styles/tradition-styles.css
+++ b/css/menu-styles/tradition-styles.css
@@ -3,6 +3,14 @@ body {
   padding-bottom: 20px;
 }
 
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
+  gap: 0rem;
+}
+
+.ucb-page-content {
+ background: #fff;
+}
+/* LAYOUT IMPLEMENTATION NEEDED
 .layout-boxed.layout-fixed {
   background-color: #333;
 }
@@ -32,42 +40,76 @@ body {
 .banner-black #header-wrapper {
   background-color: #000;
 }
+*/
+
+.ucb-header-dark .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+.ucb-header-dark .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+  background-color: #424242;
+}
+
+.ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+.ucb-header-light .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+  background-color: #eee;
+}
+
+.ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+.ucb-header-white .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+  background-color: #fff;
+}
+
+.ucb-header-black .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+.ucb-header-black .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+  background-color: #000;
+}
+
 .banner-black .ucb-secondary-menu-region-container {
   background-color: #000;
   color: #000;
 }
-.banner-black .ucb-secondary-menu-region-container #secondary-menu {
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item {
   background-color: #cfb87c;
 }
-.banner-black .ucb-secondary-menu-region-container h2 {
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a {
   padding: 0 5px;
+  color: #000;
+  font-weight: 400;
 }
-.banner-black .ucb-secondary-menu-region-container a {
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a{
   display: inline-block;
 }
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a:hover,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a:focus,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a.active,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a.active-trail {
+  color:#fff;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item:hover,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item:focus,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item.active,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item.active-trail {
+  background-color: #444;
+  color:#fff;
+}
+
 .banner-black .ucb-secondary-menu-region-container a:link,
 .banner-black .ucb-secondary-menu-region-container a:visited {
   color: #000;
-}
-.banner-black .ucb-secondary-menu-region-container a:hover,
-.banner-black .ucb-secondary-menu-region-container a:focus,
-.banner-black .ucb-secondary-menu-region-container a.active,
-.banner-black .ucb-secondary-menu-region-container a.active-trail {
-  color: #fff;
-  background-color: #444;
 }
 
 #main-menu-wrapper {
   background-color: #fff;
 }
 
-#main-menu-wrapper #navigation #main-menu > li > a {
+li.main-menu-item a.nav-link {
   color: #333;
   font-weight: 600;
   line-height: 60px;
   position: relative;
+  border-bottom: none;
 }
-#main-menu-wrapper #navigation #main-menu > li > a:before {
+li.main-menu-item a.nav-link:before {
   position: absolute;
   bottom: 10px;
   left: 0;
@@ -80,10 +122,15 @@ body {
   background: transparent;
   height: 3px !important;
 }
-#main-menu-wrapper #navigation #main-menu > li > a.active:before,
-#main-menu-wrapper #navigation #main-menu > li > a.active-trail:before,
-#main-menu-wrapper #navigation #main-menu > li > a:hover:before {
+li.main-menu-item a.nav-link.active:before,
+li.main-menu-item a.nav-link.active-trail:before,
+li.main-menu-item a.nav-link:hover:before {
   background-color: #cfb87c !important;
+}
+li.main-menu-item a.nav-link.active,
+li.main-menu-item a.nav-link.active-trail,
+li.main-menu-item a.nav-link:hover {
+  border-bottom: none;
 }
 #main-menu-wrapper #navigation #main-menu > li > a#home-link,
 #main-menu-wrapper #navigation #main-menu > li > a#home-link.active {
@@ -98,16 +145,19 @@ body {
   margin-left: -12px;
 }
 
-#navigation #action-menu {
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item {
+
   padding: 10px 0;
 }
-#navigation #action-menu a {
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a {
+  font-weight: 400;
   color: #757575;
 }
-#navigation #action-menu a.active,
-#navigation #action-menu a.active-trail,
-#navigation #action-menu a:hover {
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a.active,
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a.active-trail,
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a:hover {
   color: #111;
+  background: transparent;
 }
 
 #main {
@@ -200,7 +250,7 @@ body {
 .feature-layout-wrapper {
   padding-top: 20px;
 }
-
+/* BLOCK AND NESTED MENU IMPLEMENTATION NEEDED
 #block-menu-block-site-navigation-menus-1 .menu-block-wrapper,
 #block-menu-block-site-navigation-menus-2 .menu-block-wrapper,
 #block-menu-block-site-navigation-menus-3 .menu-block-wrapper,
@@ -359,7 +409,8 @@ body {
   padding: 5px 10px;
   background-color: #e7e7e7;
 }
-
+*/
+/* MOBILE IMPLEMENTATION NEEDED
 #mobile-navigation-wrapper {
   background-color: #222;
   color: #fff;
@@ -417,3 +468,4 @@ body {
 .has-feature-title-image #page-title-wrapper {
   display: none;
 }
+*/
