--- a/css/menu-styles/rise-styles.css
+++ b/css/menu-styles/rise-styles.css
@@ -15,13 +15,25 @@ body {
  padding-top: 20px;
 }
 
-.ucb-secondary-menu-position-inline .ucb-main-menu,
-.ucb-main-nav-continer.ucb-secondary-menu-position-inline,
-.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-main-menu {
+.ucb-header-dark .ucb-secondary-menu-position-inline .ucb-main-menu,
+.ucb-header-dark .ucb-main-nav-continer.ucb-secondary-menu-position-inline,
+.ucb-header-dark .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-main-menu,
+.ucb-header-black .ucb-secondary-menu-position-inline .ucb-main-menu,
+.ucb-header-black .ucb-main-nav-continer.ucb-secondary-menu-position-inline,
+.ucb-header-black .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-main-menu  {
   margin-bottom: -20px;
   background-color: #f7f7f7;
 }
 
+.ucb-header-light .ucb-secondary-menu-position-inline .ucb-main-menu,
+.ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-inline,
+.ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-main-menu,
+.ucb-header-white .ucb-secondary-menu-position-inline .ucb-main-menu,
+.ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-inline,
+.ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-main-menu  {
+  margin-bottom: -20px;
+  background-color: #333;
+}
 .ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a,
 .ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a {
   color: #666;
@@ -102,11 +114,6 @@ section.ucb-main-nav-section.ucb-header-black {
   color: #cfb87c;
   border-bottom: none;
 }
-.ucb-header-dark #main-menu-wrapper,
-.ucb-header-black #main-menu-wrapper {
-  background-color: #444;
-  position: static;
-}
 .ucb-header-dark li.main-menu-item a.nav-link,
 .ucb-header-black li.main-menu-item a.nav-link {
   color: #000;
@@ -169,9 +176,10 @@ section.ucb-main-nav-section.ucb-header-black {
 }
 .ucb-header-light li.main-menu-item a.nav-link,
 .ucb-header-white li.main-menu-item a.nav-link {
-  color: #000;
+  color: #fff;
   font-weight: 600;
   border-bottom: none;
+  margin-top: 0px;
 }
 .ucb-header-light li.main-menu-item a.nav-link:hover,
 .ucb-header-light li.main-menu-item a.nav-link.active,
