--- a/css/menu-styles/simple-styles.css
+++ b/css/menu-styles/simple-styles.css
@@ -9,7 +9,7 @@ body {
 .ucb-page-content {
  background: #fff;
 }
-/* LAYOUT IMPLEMENTATION NEEDED 
+/* LAYOUT IMPLEMENTATION NEEDED
 .layout-wide #backstretch {
   display: none;
 }
@@ -35,6 +35,9 @@ body {
 }
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
   background-color: #fff;
+}
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline {
+border-top: 20px solid #fff;
 }
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-primary-menu-region-container,
 .ucb-main-nav-continer.ucb-secondary-menu-position-inline {
