--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@
   }
   
   .ucb-menu a.nav-link {
-    font-size: 0.85rem;
+    font-size: 0.85em;
     vertical-align: baseline;
     font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 600;
